Rename RuntimeGeneratedUnion
This is the interface that originated the archetype idea: runtime needs
more info than codegen.

Rename it to UnionTypeObjectArchetype and tie it to the Archetype class
hierarchy.

JIRA: YANGTOOLS-1796
Change-Id: I4babd87dbde4fc6966cbaee34c844f35e09890d3
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>